tests/baselines/reference/interfaceWithStringIndexerHidingBaseTypeIndexer3.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithStringIndexerHidingBaseTypeIndexer3.ts(13,5): error TS2412: Property '2' of type '{ a: 数字; }' is not assignable to numeric index type '{ a: 数字; b: 数字; }'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithStringIndexerHidingBaseTypeIndexer3.ts (1 errors) ====
    interface Base {
        [x: number]: { a: number }
        1: {
            a: number; b: number;
        }
    }
    
    interface Derived extends Base {
        [x: number]: {
            a: number; b: number
        };
        // error
        2: {
        ~~~~
            a: number;
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2412: Property '2' of type '{ a: 数字; }' is not assignable to numeric index type '{ a: 数字; b: 数字; }'.
    }